add crud methods for card + tests
